--- a/.github/workflows/build-bin.yaml
+++ b/.github/workflows/build-bin.yaml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ '3.x' ]
+        python-version: [3.6, 3.7, 3.8, 3.9]
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
@@ -14,20 +14,20 @@ jobs:
         uses: actions/checkout@v2
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: Setup python
+      - name: Setup python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-      - run: echo "Installing coverage"
-      - run: python -mpip install coverage
-      - run: echo "Run setup"
-      - run: python ./setup.py install
-      - name: verify install
+      - name: Installing coverage && running setup
+      - run: |
+          python -mpip install coverage nose
+          python ./setup.py install
+      - name: Verify install
         run: |
-          echo "Verifying install worked"
           which binwalk 
-      - run: echo "Running tests against install"
-      - run: python ./setup.py test
+      - name: Running tests
+        run: |
+          python ./setup.py test
       - run: echo "🍏 This job's status is ${{ job.status }}."
 
