--- a/.github/workflows/build-bin.yaml
+++ b/.github/workflows/build-bin.yaml
@@ -1,13 +1,12 @@
 name: Build and Test Binwalk
 on: [push, pull_request]
 jobs:
-  build:
+  build-on-focal:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
@@ -21,13 +20,45 @@ jobs:
           architecture: x64
       - name: Installing coverage && running setup
         run: |
-          python -mpip install coverage nose
           python ./setup.py install
       - name: Verify install
         run: |
           which binwalk 
       - name: Running tests
         run: |
+          python -mpip install coverage nose
           python ./setup.py test
+          dd if=/dev/urandom of=/tmp/random.bin bs=1M count=1 
+          binwalk -J -E /tmp/random.bin
+      - run: echo "🍏 This job's status is ${{ job.status }}."
+  build-on-bionic:
+    runs-on: ubuntu-18.04
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8, 3.9]
+    steps:
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: Setup python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+          architecture: x64
+      - name: Installing coverage && running setup
+        run: |
+          python ./setup.py install
+      - name: Verify install
+        run: |
+          which binwalk 
+      - name: Running tests
+        run: |
+          python -mpip install coverage nose
+          python ./setup.py test
+          dd if=/dev/urandom of=/tmp/random.bin bs=1M count=1 
+          binwalk -J -E /tmp/random.bin
       - run: echo "🍏 This job's status is ${{ job.status }}."
 
